# langchain-academy

./: .env.sample  .gitignore  Dockerfile  LangChain-Academy-Assistant.ipynb  LangChain-Academy-Module-1.ipynb  LangChain-Academy-Module-2.ipynb  LangChain-Academy-Module-3.ipynb  LangChain-Academy-Module-4-Assistant.ipynb  LangChain-Academy-Module-4-Components.ipynb  LangChain-Academy-Module-4.ipynb  LangTrain-LangGraph-Assistant.ipynb  LangTrain-LangGraph-Module_1.ipynb  LangTrain-LangGraph_Course.ipynb  README-ja.md  README.md  compose.yaml  docker-compose.yml  food-forest-chat-agent-notes.md  keys.txt  pyproject.toml  reqirements_freeze_20240911.txt  requirements.txt
.devcontainer/: .env.example  Dockerfile  README.md  devcontainer.json
assistant/: agent.py  assistant.py  chain.py  chatbot.py  dynamic_breakpoints.py  langgraph.json  map_reduce.py  parallelization.py  requirements.txt  research_assistant.py  router.py  simple.py
deeplearning-ai/: README.md
langchain-academy/: requirements.txt
module-0/: 00basics.ipynb  M0L1_basics.ipynb  basics.ipynb  basics1.ipynb  basics_ja.ipynb
module-1/: 02simple-graph.ipynb  03-router.ipynb  04chain.ipynb  07agent-memory.ipynb  08deployment.ipynb  1-simple-graph.ipynb  2-chain.ipynb  3-agent.ipynb  4-agent-memory.ipynb  4.agent.ipynb  5-router.ipynb  6-deployment.ipynb  M1L2_simple-graph.ipynb  M1L4_chain.ipynb  M1L5_router.ipynb  M1L6_agent.ipynb  M1L7_agent-memory.ipynb  M1L8_deployment.ipynb  agent-ja.ipynb  agent-memory-ja.ipynb  agent-memory.ipynb  agent-memory.md  agent.ipynb  agent.md  chain-ja.ipynb  chain.ipynb  chain.md  deployment-ja.ipynb  deployment.ipynb  deployment.md  langsmith_test.py  router-ja.ipynb  router.ipynb  router.md  simple-graph-ja.ipynb  simple-graph.ipynb  simple-graph.md
module-2/: 01state-schema.ipynb  02state-reducers.ipynb  03multiple-schemas.ipynb  04trim-filter-messages.ipynb  05chatbot-summarization.ipynb  06chatbot-external-memory.ipynb  1-state-schema.ipynb  1.state-schema.ipynb  2-state-reducers.ipynb  3-multiple-schemas.ipynb  4-trim-filter-messages.ipynb  5-chatbot-summarization.ipynb  5.chatbot-summarization.ipynb  6-chatbot-external-memory.ipynb  M2L1_state-schema.ipynb  M2L2_state-reducers.ipynb  M2L3_multiple-schemas.ipynb  M2L4_trim-filter-messages.ipynb  M2L5_chatbot-summarization.ipynb  M2L6_chatbot-external-memory.ipynb  chatbot-external-memory-ja.ipynb  chatbot-external-memory.ipynb  chatbot-external-memory.md  chatbot-summarization-ja.ipynb  chatbot-summarization.ipynb  chatbot-summarization.md  multiple-schema-ja.ipynb  multiple-schemas.ipynb  multiple-schemas.md  multiple-states.ipynb  state-reducers-ja.ipynb  state-reducers.ipynb  state-reducers.md  state-schema-ja.ipynb  state-schema.ipynb  state-schema.md  trim-filter-messages-ja.ipynb  trim-filter-messages.ipynb  trim-filter-messages.md
module-3/: 01streaming-interruption.ipynb  05time-travel.ipynb  1-streaming-interruption.ipynb  1.streaming-interruption.ipynb  2-breakpoints.ipynb  3-edit-state-human-feedback.ipynb  3.edit-state-human-feedback.ipynb  4-dynamic-breakpoints.ipynb  5-time-travel.ipynb  CkPtConfusion.ipynb  M3L1_streaming-interruption.ipynb  M3L2_breakpoints.ipynb  M3L3_edit-state-human-feedback.ipynb  M3L4_dynamic-breakpoints.ipynb  M3L5_time-travel.ipynb  Simple_time_travel.ipynb  breakpoints-ja.ipynb  breakpoints.ipynb  breakpoints.md  debug-time-travel.ipynb  dynamic-breakpoints-ja.ipynb  dynamic-breakpoints.ipynb  dynamic-breakpoints.md  edit-state-human-feedbac-ja.ipynb  edit-state-human-feedback.ipynb  edit-state-human-feedback.md  save-streaming-interruption.ipynb  save-time-travel.ipynb  streaming-interruption-ja.ipynb  streaming-interruption.ipynb  streaming-interruption.md  time-travel-ja.ipynb  time-travel.ipynb  time-travel.md
module-4/: 01parallelization.ipynb  04-research-assistant.ipynb  1-parallelization.ipynb  1.parallelization.ipynb  2-sub-graph.ipynb  3-map-reduce.ipynb  3.map-reduce.ipynb  4-research-assistant.ipynb  M4L1_parallelization.ipynb  M4L2_sub-graph.ipynb  map-reduce-ja.ipynb  (+14 more)
(+138 files in other folders)
