[project]
name = "langchain-academy"
version = "0.2.0"
description = "explain how to use LangGraph"
authors = [{name="langchain academy contributors"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph-sdk>=0.1.33",
    "langgraph>=0.2.39",
    "langgraph>=0.2,<0.3",
    "langgraph-checkpoint-sqlite>=1.0",
    "langsmith>=0.1",
    "tavily-python>=0.5",
    "langchain-core>=0.3,<0.4",
    "wikipedia>=1.4",
    "langchain-openai>=0.2,<0.3",
    "ipykernel>=6.29",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3.1",
]

[tool.uv]
dev-dependencies = [
    #"pre-commit>=3.8.0",
    "ruff>=0.7",
    "pyright>=1.1",
]


[tool.ruff]
# ruff setting document: https://docs.astral.sh/ruff/
line-length = 120
target-version = "py312"

exclude = [
    # default setting: https://docs.astral.sh/ruff/configuration/
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__pycache__",
]


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E402", "E501"]


[tool.ruff.format]
# https://docs.astral.sh/ruff/settings/#format_docstring-code-line-length
quote-style = "double"
