[tool.poetry]
name = "langchain-academy"
version = "0.1.0"
description = ""
authors = ["shirochan"]
package-mode = false


[tool.poetry.dependencies]
python = "3.11.10"
langgraph = "^0.2.45"
langgraph-sdk = "^0.1.35"
langgraph-checkpoint-sqlite = "^2.0.1"
langsmith = "^0.1.140"
langchain-community = "^0.3.5"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
notebook = "^7.2.2"
tavily-python = "^0.5.0"
wikipedia = "^1.4.0"
trustcall = "^0.0.25"
langgraph-cli = "^0.1.55"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
